# time-series-analyses

./: .gitignore  README.md  prompts.py  pyproject.toml
data/: BigSiouxAnnualQ.csv  MarchMilwaukeeChloride.csv  dataset.xlsx
requirements/: requirements-dev.txt  requirements.txt
rhis_timeseries.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: duration_curves.py
src/hypothesis_tests/: mann_kendall.py  mann_whitney.py  non_parametric.py  randomness.py  wald_wolfovitz.py
src/rhis_timeseries/: __main__.py
src/rhis_timeseries.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/rhis_timeseries/errors/: exception.py
src/rhis_timeseries/evolution/: data.py  errors.py  plots.py  rhis.py  stats.py
src/rhis_timeseries/hypothesis_tests/: mann_kendall.py  mann_whitney.py  non_parametric.py  randomness.py  runs.py  wald_wolfovitz.py  wald_wolfowitz.py
src/rhis_timeseries/representative/: most_recent.py
src/rhis_timeseries/scripts/: duration_curves.py  gaussianplume.py  seriestemporaisparanapanema.py  statistical_evolution.py
src/rhis_ts/: __main__.py
src/rhis_ts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/scripts/: duration_curves.py
tests/: test_mann_kendall.py  test_mann_whitney.py  test_runs.py  test_wald_wolfowitz.py
time_series_analyses/: main.py
time_series_analyses/hypothesis_tests/: non_parametric.py
time_series_analyses/scripts/: duration_curves.py  gaussianplume.py  seriestemporaisparanapanema.py  statistical_evolution.py
(+84 files in other folders)
